--- a/src/app/components/eleve-detail/eleve-detail.component.html
+++ b/src/app/components/eleve-detail/eleve-detail.component.html
@@ -1,8 +1,15 @@
-<div class="card" style="width: 18rem;">
-  <img class="card-img-top" id="photo" src="{{eleve.imgProfil}}" alt="Card image cap">
+<div class="card" style="width: 18rem;" *ngIf="isLoaded">
+  <img class="card-img-top" id="photo" src="" alt="Card image cap">
   <div class="card-body">
-    <h5 class="card-title">{{eleve.nom}} {{eleve.prenom}}</h5>
-    <p class="card-text" *ngIf="estAfficher">{{eleve.citation}}</p>
-    <a (click)="afficherDetail()"  class="btn btn-primary">Go somewhere</a>
+    <h5 class="card-title">{{eleve.lastname}} {{eleve.firstname}}</h5>
+    <p class="card-text" *ngIf="estAfficher">{{eleve.address.nbrStreet}} {{eleve.address.street}} {{eleve.address.city}}
+      {{eleve.address.zipCode}} {{eleve.address.country}}</p>
+    <a (click)="afficherDetail()" class="btn btn-primary">Afficher adresse</a>
+  </div>
+</div>
+
+<div class="card" style="width: 18rem;" *ngIf="!isLoaded">
+  <div class="spinner-border" role="status">
+    <span class="sr-only">Loading...</span>
   </div>
 </div>
