--- a/src/app/components/form-seance/form-seance.component.html
+++ b/src/app/components/form-seance/form-seance.component.html
@@ -1,1 +1,20 @@
-<p>form-seance works!</p>
+<form (ngSubmit)="onSubmit(form)" #form="ngForm">
+  
+  <div class="form-group">
+    <label for="titre">Titre</label>
+    <input type="text" class="form-control" id="titre" placeholder="Titre" name="titre" ngModel>
+  </div>
+  
+  <div class="form-group">
+    <label for="note">Note</label>
+    <input type="text" class="form-control" id="Note" placeholder="Note" name="note" ngModel>
+  </div>
+  
+  <div class="form-group">
+    <label for="date">Date de la séance</label>
+    <input type="date" class="form-control" id="date" placeholder="Date de la séance" name="date" ngModel>
+  </div>
+  
+  <button type="submit" class="btn btn-primary">Submit</button>
+
+</form>
